<?xml version="1.0"?>
<package format="3">
  <name>turtlebot3_hospital_msgs</name>
  <version>0.0.0</version>
  <description>Mensajes para la simulación con el hospital</description>
  <maintainer email="andrmarmar@gmail.com">andres</maintainer>
  <license>Apache-2.0</license>

  <!-- build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- build dependencies -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- execution/runtime dependencies -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- 👇 obligatorio para paquetes de mensajes -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
